fixed title size and top pictures on small screens

--- a/app/assets/stylesheets/master.scss.css
+++ b/app/assets/stylesheets/master.scss.css
@@ -63,6 +63,12 @@ h1 {
 	margin-right: auto;
 }
 
+@media(min-width: 480px){
+	.fa-chevron-right {	
+		color:black;
+	}
+	.fa-chevon-right
+}
 @media(max-width: 800px){
 	.carousel-img {
 		height: 250px;
@@ -274,6 +280,11 @@ text-align: center;
 	font-size: 0.8em;
 }
 
+@media(max-width:380px) {
+	.title-name {
+		font-size: 1.5em;
+	}
+}
 @media(max-width:600px) {
 	.double-text {
 		border-bottom: 1px solid #bebebd;
@@ -281,6 +292,11 @@ text-align: center;
 	}
 	.price-button {
 		margin-right: 2px;
+	}
+	.top-pictures {
+		height:100%;
+		width:100%;
+
 	}
 }
 
